Update solar site

--- a/API.html
+++ b/API.html
@@ -135,7 +135,13 @@
 
         <div class="container">
             <div class="well">
-              <h1>Knowledge</h1>
+              <div id="toc" class="toc">
+<div id="toctitle">Table of Contents</div>
+<ul class="sectlevel1">
+<li><a href="#submenuconfig">submenuconfig</a></li>
+<li><a href="#solar_api">SolAR API</a></li>
+</ul>
+</div>
 <div class="sect1">
 <h2 id="submenuconfig"><a class="anchor" href="#submenuconfig"></a><a class="link" href="#submenuconfig">submenuconfig</a></h2>
 <div class="sectionbody">
@@ -143,9 +149,11 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="todo"><a class="anchor" href="#todo"></a><a class="link" href="#todo">TODO</a></h2>
+<h2 id="solar_api"><a class="anchor" href="#solar_api"></a><a class="link" href="#solar_api">SolAR API</a></h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>&lt;iframe src="https://forge.b-com.com/www/argo/api_documentation/annotated.html" width="1000px" height="800px"/&gt;</p>
+</div>
 </div>
 </div>
             </div>
