Update solar site

--- a/discover/what/index.html
+++ b/discover/what/index.html
@@ -141,7 +141,7 @@
 <li><a href="#submenuconfig">submenuconfig</a></li>
 <li><a href="#what">What ?</a>
 <ul class="sectlevel2">
-<li><a href="#solar_framework_adapts_to_your_specific_needs">SolAR framework adapts to your specific needs</a></li>
+<li><a href="#solar_adapts">SolAR adapts</a></li>
 <li><a href="#why_solar">Why SolAR ?</a></li>
 </ul>
 </li>
@@ -187,7 +187,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="solar_framework_adapts_to_your_specific_needs"><a class="anchor" href="#solar_framework_adapts_to_your_specific_needs"></a><a class="link" href="#solar_framework_adapts_to_your_specific_needs">SolAR framework adapts to your specific needs</a></h3>
+<h3 id="solar_adapts"><a class="anchor" href="#solar_adapts"></a><a class="link" href="#solar_adapts">SolAR adapts</a></h3>
 <div class="paragraph">
 <p>As your requirements are particular :</p>
 </div>
