--- a/tags.html
+++ b/tags.html
@@ -70,6 +70,15 @@
            });
         });
       </script>
+      <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107058603-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-107058603-1');
+    </script>
 </head>
 
     <body>
