Update solar site

--- a/API.html
+++ b/API.html
@@ -161,22 +161,7 @@
 <div class="sect1">
 <h2 id="solar_api"><a class="anchor" href="#solar_api"></a><a class="link" href="#solar_api">SolAR API</a></h2>
 <div class="sectionbody">
-<div class="paragraph">
-<p>There are several ways to contribute to SolAR framework.</p>
-</div>
-<div class="paragraph">
-<p>You can :</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>contribute to Core framework, by defining API, architecture, framework tools &#8230;&#8203; this typically needs software engineering and architecture skills.</p>
-</li>
-<li>
-<p>contribute to Components, by creating a new SolAR component, that can be used in a pose estimation solution&#8230;&#8203; this typically needs computer vision skills (and software skills).</p>
-</li>
-</ul>
-</div>
+<iframe src="https://forge.b-com.com/www/argo/api_documentation/annotated.html" width="1000px" height="800px"/>
 </div>
 </div>
             </div>
