--- a/discover.html
+++ b/discover.html
@@ -191,7 +191,7 @@
 </div>
 <div class="videoblock">
 <div class="content">
-<video src="discover/videos/SolAR_Concept_V3-0.2.mp4" width="860" autoplay loop>
+<video src="discover/videos/SolAR_Concept_V3-0.2.mp4" width="860" controls>
 Your browser does not support the video tag.
 </video>
 </div>
