--- a/discover/who/index.html
+++ b/discover/who/index.html
@@ -174,6 +174,7 @@ window.cookieconsent.initialise({
 <ul class="sectlevel1">
 <li><a href="#submenuconfig">submenuconfig</a></li>
 <li><a href="#who">Who ?</a></li>
+<li><a href="#contact_mail">Contact Mail</a></li>
 </ul>
 </div>
 <div class="sect1">
@@ -220,17 +221,13 @@ window.cookieconsent.initialise({
 </div>
 </div>
 </div>
-<div class="sect2">
-<h3 id="contact_us"><a class="anchor" href="#contact_us"></a><a class="link" href="#contact_us">Contact Us</a></h3>
+</div>
+</div>
+<div class="sect1">
+<h2 id="contact_mail"><a class="anchor" href="#contact_mail"></a><a class="link" href="#contact_mail">Contact Mail</a></h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>For any request, <a href="mailto:framework.solar@b-com.com">Please Contact Us</a></p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="discussions_on_slack"><a class="anchor" href="#discussions_on_slack"></a><a class="link" href="#discussions_on_slack">Discussions on slack</a></h3>
-<div class="paragraph">
-<p>Please open this link for discussions about SolAR framework <a href="https://contributesolarfw.slack.com/">SolAR Framework group</a></p>
-</div>
 </div>
 </div>
 </div>
