Update solar site

--- a/discover/what/index.html
+++ b/discover/what/index.html
@@ -198,10 +198,10 @@ window.cookieconsent.initialise({
 <p><a href="https://solarframework.github.io//discover/for_whom/">for whom</a></p>
 </li>
 <li>
-<p><a href="https://solarframework.github.io//discover/legal_notice/">legal notice</a></p>
+<p><a href="https://solarframework.github.io//discover/programmer_guide/">programmer&#8217;s guide</a></p>
 </li>
 <li>
-<p><a href="https://solarframework.github.io//discover/programmer_guide/">programmer&#8217;s guide</a></p>
+<p><a href="https://solarframework.github.io//discover/legal_notice/">legal notice</a></p>
 </li>
 </ul>
 </div>
@@ -214,7 +214,7 @@ window.cookieconsent.initialise({
 <p>SolAR is <strong>an open source</strong> framework dedicated to <strong>Augmented Reality (AR)</strong> technology.</p>
 </div>
 <div class="paragraph">
-<p>It offers a C++ SDK and a Unity plugin to <strong>easily and quickly develop</strong> and use <strong>customized solutions for camera pose estimation</strong>. It provides developers with a <strong>full chain</strong> from low-level vision components development to <strong>camera pose estimation pipelines</strong> implementation and AR service development.</p>
+<p>It offers a C++ SDK to <strong>easily and quickly develop</strong> and use <strong>customized solutions for camera pose estimation</strong>. It provides developers with a <strong>full chain</strong> from low-level vision components development to <strong>camera pose estimation pipelines</strong> implementation and AR service development.</p>
 </div>
 <div class="paragraph">
 <p>The SolAR framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache v2 licence</strong></a>,
@@ -224,6 +224,9 @@ e-health, etc.).</p>
 </div>
 <div class="paragraph">
 <p>The SolAR framework aims at stimulating the interaction between <strong>all actors of the AR technology development</strong> and ease the technology transfer for the benefit of end-users.</p>
+</div>
+<div class="paragraph">
+<p>A Unity plugin SolAR compatible will come soon.</p>
 </div>
 </div>
 </div>
