Update solar site

--- a/discover/what/index.html
+++ b/discover/what/index.html
@@ -249,7 +249,7 @@ e-health, etc.).</p>
 <p>So, SolAR framework offers an alternative to current commercialized AR SDK or existing open-source solutions offering the benefits of both previous approaches – <strong>openness, easiness, efficiency, adaptiveness</strong>. It aims at creating an ecosystem bringing researchers, developers, and end-users together to accelerate the augmented reality technological development.</p>
 </div>
 <div class="paragraph">
-<p>We hope that this open-source framework will limit the creation of vertical siloes and enables players in the chain to offer part of an overall AR solution.</p>
+<p>We hope that this open-source framework will limit the creation of vertical siloes and enable players in the supply chain to offer part of an overall AR solution.</p>
 </div>
 </div>
 </div>
