--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ window.cookieconsent.initialise({
 <h2 id="solar_is_always_improving"><a class="anchor" href="#solar_is_always_improving"></a><a class="link" href="#solar_is_always_improving">SolAR is always improving</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>SolAR is an open-souce project, join the community, contribute to the SolAR framework and particpate to the augmented reality adoption.</p>
+<p>SolAR is an open-souce project, join the community, contribute to the SolAR framework and participate to the augmented reality adoption.</p>
 </div>
 </div>
 </div>
