Update solar site

--- a/discover/how/index.html
+++ b/discover/how/index.html
@@ -236,7 +236,7 @@ window.cookieconsent.initialise({
 </div>
 <div class="videoblock">
 <div class="content">
-<video src="videos/SolAR_Concept_V6.mp4" width="860" controls>
+<video src="videos/SolARConcept.mp4" width="860" controls>
 Your browser does not support the video tag.
 </video>
 </div>
