--- a/discover.html
+++ b/discover.html
@@ -219,6 +219,13 @@ Your browser does not support the video tag.
 </video>
 </div>
 </div>
+<div class="videoblock">
+<div class="content">
+<video src="discover/videos/solAr.mp4" width="860" controls>
+Your browser does not support the video tag.
+</video>
+</div>
+</div>
 </div>
 </div>
             </div>
