--- a/discover/how/index.html
+++ b/discover/how/index.html
@@ -236,14 +236,14 @@ window.cookieconsent.initialise({
 </div>
 <div class="videoblock">
 <div class="content">
-<video src="videos/solARConcept.mp4" width="860" controls>
+<video src="https://forge.b-com.com/www/argo/discover/videos/solAR.mp4" width="860" controls>
 Your browser does not support the video tag.
 </video>
 </div>
 </div>
 <div class="videoblock">
 <div class="content">
-<video src="../discover/videos/solAr.mp4" width="860" controls>
+<video src="../videos/solARConcept.mp4" width="860" controls>
 Your browser does not support the video tag.
 </video>
 </div>
