--- a/discover.html
+++ b/discover.html
@@ -124,7 +124,12 @@ window.cookieconsent.initialise({
             <div class="col-mg-3">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav navbar-brand">
-                        <li><a href="https://solarframework.github.io//" class="link"> <image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" </a></li>
+                        <li><a href="https://solarframework.github.io//" class="link">&lsaquo;SolAR&rsaquo;</a></li>		
+                        <!--<li><a href="https://solarframework.github.io//" class="link"><image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></a></li>-->
+                         <!--test local ok<li><a href="https://solarframework.github.io//" class="link"><image src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></a></li>     -->
+                                                 <!--apparait pas<li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></li>-->
+                      <!--test local ok <li><image href="" class="link" src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></li>
+                        <li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="40"></li>-->
                     </ul>
                 </div>
             </div>
@@ -211,7 +216,7 @@ window.cookieconsent.initialise({
 <h2 id="discover_solar"><a class="anchor" href="#discover_solar"></a><a class="link" href="#discover_solar">Discover Solar</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>SolAR is an <strong>open-source framework</strong> released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache license 2.0</strong></a> making possible to easily <strong>create your own camera pose estimation</strong> solution to develop augmented reality applications.</p>
+<p>SolAR is an <strong>open-source framework</strong> released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache license 2.0</strong></a> making it possible to easily <strong>create your own camera pose estimation</strong> solution to develop augmented reality applications.</p>
 </div>
 <div class="videoblock">
 <div class="content">
