--- a/discover/for_whom/index.html
+++ b/discover/for_whom/index.html
@@ -124,7 +124,12 @@ window.cookieconsent.initialise({
             <div class="col-mg-3">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav navbar-brand">
-                        <li><a href="https://solarframework.github.io//" class="link"> <image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" </a></li>
+                        <li><a href="https://solarframework.github.io//" class="link">&lsaquo;SolAR&rsaquo;</a></li>		
+                        <!--<li><a href="https://solarframework.github.io//" class="link"><image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></a></li>-->
+                         <!--test local ok<li><a href="https://solarframework.github.io//" class="link"><image src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></a></li>     -->
+                                                 <!--apparait pas<li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></li>-->
+                      <!--test local ok <li><image href="" class="link" src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></li>
+                        <li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="40"></li>-->
                     </ul>
                 </div>
             </div>
@@ -174,7 +179,7 @@ window.cookieconsent.initialise({
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#submenuconfig">submenuconfig</a></li>
-<li><a href="#for_whom_is_solar">for whom is SolAR?</a></li>
+<li><a href="#for_whom_is_solar">For whom is SolAR?</a></li>
 <li><a href="#solar_adapts">SolAR adapts</a></li>
 <li><a href="#solar_main_applications">SolAR main applications</a></li>
 </ul>
@@ -210,15 +215,15 @@ window.cookieconsent.initialise({
 </div>
 </div>
 <div class="sect1">
-<h2 id="for_whom_is_solar"><a class="anchor" href="#for_whom_is_solar"></a><a class="link" href="#for_whom_is_solar">for whom is SolAR?</a></h2>
+<h2 id="for_whom_is_solar"><a class="anchor" href="#for_whom_is_solar"></a><a class="link" href="#for_whom_is_solar">For whom is SolAR?</a></h2>
 <div class="sectionbody">
 <div class="ulist">
 <ul>
 <li>
-<p>SolAR framework is for <strong>pose estimation developers</strong>, to make possible to create a pose estimation scheme with the best computer vision components.</p>
+<p>For <strong>pose estimation developers</strong>, allowing them to create a pose estimation scheme with the best computer vision components available.</p>
 </li>
 <li>
-<p>SolAR framework is also for <strong>AR service developpers</strong> : they will benefit from the best pose estimation int their AR application.</p>
+<p>For <strong>AR service developpers</strong>, allowing them to benefit from the best pose estimation pipelines in their AR applications.</p>
 </li>
 </ul>
 </div>
@@ -228,26 +233,26 @@ window.cookieconsent.initialise({
 <h2 id="solar_adapts"><a class="anchor" href="#solar_adapts"></a><a class="link" href="#solar_adapts">SolAR adapts</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>As your requirements are <strong>particular</strong> :</p>
+<p>As your requirements are <strong>specific</strong>:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>specific environment</p>
+<p>Specific environments</p>
 </li>
 <li>
-<p>device</p>
+<p>Specific devices</p>
 </li>
 <li>
-<p>accuracy</p>
+<p>Specific accuracy</p>
 </li>
 <li>
-<p>tracking area scale</p>
+<p>Specific tracking area scale</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p>you will find here all you need to build a <strong>customized and efficient solution</strong> to estimate your vision sensor pose for augmented reality purpose.</p>
+<p>you will find all you need to build a <strong>custom and efficient solution</strong> to estimate your own vision sensor pose for augmented reality.</p>
 </div>
 </div>
 </div>
@@ -255,21 +260,21 @@ window.cookieconsent.initialise({
 <h2 id="solar_main_applications"><a class="anchor" href="#solar_main_applications"></a><a class="link" href="#solar_main_applications">SolAR main applications</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>SolAR focuses on 4 <strong>big use cases</strong> and adpats to their constraints .</p>
+<p>SolAR focuses on 4 <strong>big use cases</strong> and adapts to their constraints.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>home services</p>
+<p>Home services</p>
 </li>
 <li>
-<p>health services</p>
+<p>Health services</p>
 </li>
 <li>
-<p>industry</p>
+<p>Industry</p>
 </li>
 <li>
-<p>real estate</p>
+<p>Real estate</p>
 </li>
 </ul>
 </div>
