--- a/discover/how/index.html
+++ b/discover/how/index.html
@@ -124,7 +124,12 @@ window.cookieconsent.initialise({
             <div class="col-mg-3">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav navbar-brand">
-                        <li><a href="https://solarframework.github.io//" class="link"> <image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" </a></li>
+                        <li><a href="https://solarframework.github.io//" class="link">&lsaquo;SolAR&rsaquo;</a></li>		
+                        <!--<li><a href="https://solarframework.github.io//" class="link"><image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></a></li>-->
+                         <!--test local ok<li><a href="https://solarframework.github.io//" class="link"><image src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></a></li>     -->
+                                                 <!--apparait pas<li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></li>-->
+                      <!--test local ok <li><image href="" class="link" src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></li>
+                        <li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="40"></li>-->
                     </ul>
                 </div>
             </div>
@@ -217,23 +222,23 @@ window.cookieconsent.initialise({
 </div>
 </div>
 <div class="paragraph">
-<p>SolAR Framework addresses the full chain of AR applications development:</p>
+<p>The SolAR Framework addresses the full chain of AR applications development:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>SolAR <strong>Components creation</strong>: SolAR framework defines a unique API for base components required for camera pose estimation (features extractor, descriptors calculation, matching, Perspective N Points, homography, image filters, etc.). SolAR community can develop new components compliant with the SolAR components API, whether royalty free or under commercial license. To ease the publication of your SolAR components, you can embed them in containers.</p>
+<p><strong>Components creation</strong>: The SolAR framework defines a unique API for base components required for camera pose estimation (features extractor, descriptors calculation, matching, Perspective N Points, homography, image filters, etc.). The SolAR community can develop new components compliant with the SolAR components API, whether royalty free or under commercial license. To ease the publication of your SolAR components, you can embed them in containers.</p>
 </li>
 <li>
-<p>Camera pose estimation <strong>pipeline implementation</strong>: You can download containers of components published by the SolAR community. The SolAR framework provides developers with a pipeline mechanism allowing to connect SolAR components to define your own camera pose estimation solution (today through a SDK, soon thanks to a dedicated graphic editor). When your pipeline is validated, you can published it for AR applications developers.</p>
+<p><strong>Pipeline implementation</strong> of camera pose estimation: You can download containers of components published by the SolAR community. The SolAR framework provides developers with a pipeline mechanism allowing to connect SolAR components to define your own camera pose estimation solution (today through a SDK, soon thanks to a dedicated graphic editor). When your pipeline is validated, you can published it for AR applications developers.</p>
 </li>
 <li>
-<p>AR <strong>service development</strong>: Bu using Unity directly the SolAR SDK, load the camera pose estimation solution of your choice developed by the SolAR community that most fit your application requirements. Simply develop your AR application as you can do it with any AR SDK and roll out it. As SolAR is based on a unique interface, you will be able to easily evolve your application with the new solutions developed by the SolAR community.</p>
+<p><strong>AR service development</strong>: By controlling the SolAR SDK directly from Unity, load the camera pose estimation solution developed by the SolAR community that best fits your application requirements. Simply develop your AR application as with any AR SDK and roll it out. Since SolAR is based on a unified interface, you will be able to easily make your application evolve with the new solutions developed by the SolAR community.</p>
 </li>
 </ol>
 </div>
 <div class="paragraph">
-<p>The following video present in more details these 3 steps.</p>
+<p>The following video presents these 3 steps in more detail:</p>
 </div>
 <div class="videoblock">
 <div class="content">
@@ -248,13 +253,11 @@ Your browser does not support the video tag.
 <h2 id="solar_is_open_source"><a class="anchor" href="#solar_is_open_source"></a><a class="link" href="#solar_is_open_source">SolAR is open-source</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache v2 licence</strong></a>,
-that lets you use it <strong>for research</strong> as well as <strong>commercial purposes</strong>
-adressing various domains (smart factory, smart home, real estate,
-e-health, etc).</p>
+<p>This framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache v2 license</strong></a>,
+that lets you use it <strong>for research</strong> as well as <strong>commercial purposes</strong>.</p>
 </div>
 <div class="paragraph">
-<p>Nevertheless, the components you will connect to develop your own solution can be under various licences. Always check the compatibility of the components licences, the SolAR community can not be held reponsible for a violation of the licenses of the components that you use.</p>
+<p>Nevertheless, the components you will connect to develop your own solution can be under various licenses. Always check the compatibility of the components' licenses. The SolAR community cannot be held responsible for a violation of the licenses of the components that you use.</p>
 </div>
 </div>
 </div>
