--- a/discover/what/index.html
+++ b/discover/what/index.html
@@ -124,7 +124,12 @@ window.cookieconsent.initialise({
             <div class="col-mg-3">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav navbar-brand">
-                        <li><a href="https://solarframework.github.io//" class="link"> <image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" </a></li>
+                        <li><a href="https://solarframework.github.io//" class="link">&lsaquo;SolAR&rsaquo;</a></li>		
+                        <!--<li><a href="https://solarframework.github.io//" class="link"><image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></a></li>-->
+                         <!--test local ok<li><a href="https://solarframework.github.io//" class="link"><image src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></a></li>     -->
+                                                 <!--apparait pas<li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></li>-->
+                      <!--test local ok <li><image href="" class="link" src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></li>
+                        <li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="40"></li>-->
                     </ul>
                 </div>
             </div>
@@ -212,22 +217,22 @@ window.cookieconsent.initialise({
 <h2 id="what"><a class="anchor" href="#what"></a><a class="link" href="#what">What</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>SolAR is <strong>an open source</strong> framework dedicated to <strong>Augmented Reality (AR)</strong> technology.</p>
+<p>SolAR is <strong>an open source</strong> framework dedicated to <strong>Augmented Reality (AR)</strong>.</p>
 </div>
 <div class="paragraph">
-<p>It offers a C++ SDK to <strong>easily and quickly develop</strong> and use <strong>customized solutions for camera pose estimation</strong>. It provides developers with a <strong>full chain</strong> from low-level vision components development to <strong>camera pose estimation pipelines</strong> implementation and AR service development.</p>
+<p>It offers a C++ SDK to <strong>easily and quickly develop</strong> and use <strong>custom solutions for camera pose estimation</strong>. It provides developers with a <strong>full chain</strong> from low-level vision components development to <strong>camera pose estimation pipelines</strong> and AR service development.</p>
 </div>
 <div class="paragraph">
-<p>The SolAR framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache v2 licence</strong></a>,
+<p>The SolAR framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache v2 license</strong></a>,
 that lets you use it for <strong>research</strong> as well as for <strong>commercial purposes</strong>
 addressing various domains (smart factory, smart home, real estate,
 e-health, etc.).</p>
 </div>
 <div class="paragraph">
-<p>The SolAR framework aims at stimulating the interaction between <strong>all actors of the AR technology development</strong> and ease the technology transfer for the benefit of end-users.</p>
+<p>The SolAR framework aims at stimulating the interaction between <strong>all actors of AR development</strong> and ease the technology transfer for the benefit of end-users.</p>
 </div>
 <div class="paragraph">
-<p>A Unity plugin SolAR compatible will come soon.</p>
+<p>A SolAR compatible Unity plugin is coming soon.</p>
 </div>
 </div>
 </div>
@@ -238,19 +243,19 @@ e-health, etc.).</p>
 <p>AR applications developers and end-users face a dilemma.</p>
 </div>
 <div class="paragraph">
-<p>On one side, major IT actors have released toolkits to develop AR applications. Nevertheless, they do not always meet the specific needs required by dedicated use cases or contextual environments (localization accuracy, lighting conditions, indoor/outdoor environments, tracking area range, dynamic scenes, etc.).</p>
+<p>On one hand, major IT actors have released toolkits to develop AR applications. Nevertheless, they do not always meet the specific needs required by dedicated use cases or contextual environments (localization accuracy, lighting conditions, indoor/outdoor environments, tracking area range, dynamic scenes, etc.).</p>
 </div>
 <div class="paragraph">
 <p>No solution fits all, and generally, these proprietary toolkits do not provide the level of tuning required to optimally adapt the vision based localization solution to the use case. Moreover, these closed solutions do not always ensure the confidentiality of data, and can store information concerning your environment (3D maps, key frames) or the augmentations (3D meshes, procedure scenarios) that could contain crucial intellectual properties.</p>
 </div>
 <div class="paragraph">
-<p>On the other side, open source vision library and SLAM implementations can generally be modified and configured to optimally meet AR applications requirements. Only, many SLAM implementations generally developed by academic actors do not provide the license or the level of maturity required for the development of commercial solutions. Likewise, open source vision libraries offer a huge number of low-level functions but require a huge expertise and important development resources to obtain a full runnable camera pose estimation ready for commercial products.</p>
+<p>On the other hand, open source vision libraries and SLAM implementations can generally be modified and configured to optimally meet AR applications requirements. However, many SLAM implementations generally developed by academic actors do not provide the license or the level of maturity required for the development of commercial solutions. Likewise, open source vision libraries offer a huge number of low-level functions but require a huge expertise and important development resources to obtain a usable camera pose estimation pipeline ready for commercial use.</p>
 </div>
 <div class="paragraph">
-<p>So, SolAR framework offers an alternative to current commercialized AR SDK or existing open-source solutions offering the benefits of both previous approaches – <strong>openness, easiness, efficiency, adaptiveness</strong>. It aims at creating an ecosystem bringing researchers, developers, and end-users together to accelerate the augmented reality technological development.</p>
+<p>Ti that end, the SolAR framework offers an alternative to current commercial AR SDKs or existing open-source solutions, providing the benefits of both worlds – <strong>openness, ease of use, efficiency, adaptiveness</strong>. It aims at creating an ecosystem bringing researchers, developers, and end-users together to accelerate the growth of augmented reality.</p>
 </div>
 <div class="paragraph">
-<p>We hope that this open-source framework will limit the creation of vertical siloes and enable players in the supply chain to offer part of an overall AR solution.</p>
+<p>We hope that this open-source framework will limit the creation of vertical silos and enable collaborators in the supply chain to each offer their part in an overall AR solution.</p>
 </div>
 </div>
 </div>
