--- a/discover/when/index.html
+++ b/discover/when/index.html
@@ -124,7 +124,12 @@ window.cookieconsent.initialise({
             <div class="col-mg-3">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav navbar-brand">
-                        <li><a href="https://solarframework.github.io//" class="link"> <image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" </a></li>
+                        <li><a href="https://solarframework.github.io//" class="link">&lsaquo;SolAR&rsaquo;</a></li>		
+                        <!--<li><a href="https://solarframework.github.io//" class="link"><image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></a></li>-->
+                         <!--test local ok<li><a href="https://solarframework.github.io//" class="link"><image src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></a></li>     -->
+                                                 <!--apparait pas<li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></li>-->
+                      <!--test local ok <li><image href="" class="link" src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></li>
+                        <li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="40"></li>-->
                     </ul>
                 </div>
             </div>
@@ -212,13 +217,13 @@ window.cookieconsent.initialise({
 <div class="sectionbody">
 <div class="paragraph">
 <p>The SolAR source code is going to be released soon for Windows and Linux (early November).
-It will include the interface definition required to build simple camera pose estimation pipelines (samples will be given on natural images and fiducial markers) as well as a first Unity plugin allowing AR service developers to create their first AR applications based on the SolAR framework.</p>
+It will include the interface definition required to build simple camera pose estimation pipelines (samples will be given on natural images and fiducial markers) as well as a Unity plugin allowing AR service developers to create their first AR applications based on the SolAR framework.</p>
 </div>
 <div class="paragraph">
-<p>The following roadmap presents the features that will be implemented in a near future on SolAR core (pipeline, multi-threading, compliance openVX, Android and iOS support, etc.) as well as the new expected components allowing the creation of extended camera pose estimation pipelines (SLAM, visual/inertial, based on depth sensors, etc.).</p>
+<p>The following roadmap presents the features that will be implemented in a near future on SolAR core (pipeline, multi-threading, openVX compliance, Android and iOS support, etc.) as well as the new expected components allowing the creation of extended camera pose estimation pipelines (SLAM, visual/inertial, depth sensor support, etc.).</p>
 </div>
 <div class="paragraph">
-<p><strong>This roadmap is a prevision, and can be modified. Please contact us for any question .</strong></p>
+<p><strong>This roadmap is a projection, and may be modified. Please contact us if you have any questions.</strong></p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -226,7 +231,7 @@ It will include the interface definition required to build simple camera pose es
 </div>
 </div>
 <div class="paragraph">
-<p>All contributions are welcome to shorten this roadmap!</p>
+<p>All contributions are welcome to bring about this roadmap!</p>
 </div>
 </div>
 </div>
