--- a/discover/legal_notice/index.html
+++ b/discover/legal_notice/index.html
@@ -124,7 +124,12 @@ window.cookieconsent.initialise({
             <div class="col-mg-3">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav navbar-brand">
-                        <li><a href="https://solarframework.github.io//" class="link"> <image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" </a></li>
+                        <li><a href="https://solarframework.github.io//" class="link">&lsaquo;SolAR&rsaquo;</a></li>		
+                        <!--<li><a href="https://solarframework.github.io//" class="link"><image src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></a></li>-->
+                         <!--test local ok<li><a href="https://solarframework.github.io//" class="link"><image src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></a></li>     -->
+                                                 <!--apparait pas<li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="70"></li>-->
+                      <!--test local ok <li><image href="" class="link" src="C:/DEV/test1306/argo-site/assets/static/logo_solAR_blue.svg" height="70"></li>
+                        <li><image href="https://solarframework.github.io//" class="link" src="https://solarframework.github.io///assets/static/logo_solAR_blue.svg" height="40"></li>-->
                     </ul>
                 </div>
             </div>
@@ -211,7 +216,7 @@ window.cookieconsent.initialise({
 <h2 id="legal_notice"><a class="anchor" href="#legal_notice"></a><a class="link" href="#legal_notice">Legal notice</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="https://b-com.com/en/legal-notice">WebSite administrators give you more information about the legal notice here.</a></p>
+<p>Since the SolAR project is managed and hosted by the b&lt;&gt;com Institute of Research and Technology, it falls under their <a href="https://b-com.com/en/legal-notice">legal notice.</a></p>
 </div>
 </div>
 </div>
