Update solar site

--- a/discover/programmer_guide/index.html
+++ b/discover/programmer_guide/index.html
@@ -437,11 +437,11 @@ implementations using tech such as CUDA and openVX while managing properly memor
 </div>
 <div class="imageblock" style="text-align: center">
 <div class="content">
-<img src="data:image/PNG;base64," alt="ThirdPartyConnector">
+<img src="data:image/png;base64," alt="ThirdPartyConnector">
 </div>
 </div>
 <div class="paragraph">
-<p>The internal buffer size of the container is currently set at <strong>one</strong> which means only the latest image and pose are available to the consumer at any given time. In the near future, WolAR will allow users to provide initialization parameters when creating components so the users will be able to specify the size of the buffer they desire.</p>
+<p>The internal buffer size of the container is currently set at <strong>one</strong> which means only the latest image and pose are available to the consumer at any given time. In the near future, SolAR will allow users to provide initialization parameters when creating components so the users will be able to specify the size of the buffer they desire.</p>
 </div>
 <div class="sect3">
 <h4 id="producer"><a class="anchor" href="#producer"></a><a class="link" href="#producer">Producer</a></h4>
